[gd_scene load_steps=40 format=3 uid="uid://c6kvg8ol0o2em"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/Player.gd" id="1_fa2ot"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerMovementStateMachine.gd" id="2_ng3tc"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerIdle.gd" id="3_1hnpp"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerWalking.gd" id="4_nucuc"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerRunning.gd" id="5_txvdn"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerAirborne.gd" id="6_puejk"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerWallrunning.gd" id="8_iebvf"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/PlayerWallsliding.gd" id="9_mwpj2"]
[ext_resource type="PackedScene" uid="uid://yporn14wo1uw" path="res://Scenes/Characters/character_component.tscn" id="9_rvmax"]
[ext_resource type="PackedScene" uid="uid://bwds1u7eredxu" path="res://Scenes/Characters/player_skeleton.tscn" id="10_bm732"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/SpringArmPivot.gd" id="10_k8tqn"]
[ext_resource type="PackedScene" uid="uid://w6nnax4sheho" path="res://Scenes/Weapons/Primary/rifle.tscn" id="11_so0pk"]
[ext_resource type="PackedScene" uid="uid://dus8iddj08o34" path="res://Scenes/Weapons/Secondary/bazooka.tscn" id="12_cu7y0"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/WeaponIK.gd" id="12_ox4fi"]
[ext_resource type="Animation" uid="uid://dmjn6o5oudtcg" path="res://Assets/Animations/Robot_Animations/A-Pose.res" id="14_st0a6"]
[ext_resource type="Animation" uid="uid://boo5w6fc11uwd" path="res://Assets/Animations/Robot_Animations/Idle.res" id="15_h44im"]
[ext_resource type="PackedScene" uid="uid://dvpmb0tlva71n" path="res://Scenes/Weapons/Secondary/grapple.tscn" id="16_4aja2"]
[ext_resource type="Animation" uid="uid://cynconlbkv7ng" path="res://Assets/Animations/Robot_Animations/Run.res" id="16_pk5a7"]
[ext_resource type="Animation" uid="uid://ds5csvtopdesw" path="res://Assets/Animations/Robot_Animations/Walk.res" id="17_buyvi"]
[ext_resource type="Animation" uid="uid://dlucu67xitj0u" path="res://Assets/Animations/Robot_Animations/Jump.res" id="18_x5gcg"]
[ext_resource type="Animation" path="res://Assets/Animations/Robot_Animations/Wall_Run.res" id="19_ymtnk"]
[ext_resource type="Animation" uid="uid://bnhsuctum4nua" path="res://Assets/Animations/Robot_Animations/Wall_Run_Flipped.res" id="21_ednmn"]
[ext_resource type="Animation" uid="uid://d3x0qfivsbujj" path="res://Assets/Animations/Robot_Animations/Jump_V2.res" id="22_piyro"]
[ext_resource type="Animation" uid="uid://c1imvalcsoqtm" path="res://Assets/Animations/Robot_Animations/Wall_Slide.res" id="23_pprg0"]
[ext_resource type="Animation" uid="uid://cew21juw8wb4v" path="res://Assets/Animations/Robot_Animations/Wall_Slide_Flip.res" id="24_553rj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k6p7c"]
radius = 0.392479
height = 1.84319

[sub_resource type="SphereShape3D" id="SphereShape3D_1vvpf"]
radius = 1.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgn6q"]
_data = {
"A-Pose": ExtResource("14_st0a6"),
"Idle": ExtResource("15_h44im"),
"Jump": ExtResource("18_x5gcg"),
"Jump_V2": ExtResource("22_piyro"),
"Run": ExtResource("16_pk5a7"),
"Walk": ExtResource("17_buyvi"),
"Wall_Run": ExtResource("19_ymtnk"),
"Wall_Run_Flipped": ExtResource("21_ednmn"),
"Wall_Slide": ExtResource("23_pprg0"),
"Wall_Slide_Flip": ExtResource("24_553rj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kddly"]
animation = &"Animations/Jump_V2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c5mnv"]
animation = &"Animations/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x57s3"]
animation = &"Animations/Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_otf6w"]
animation = &"Animations/Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lanya"]
animation = &"Animations/Wall_Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6dkbq"]
animation = &"Animations/Wall_Run_Flipped"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2kgbn"]
animation = &"Animations/Wall_Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wi3pu"]
animation = &"Animations/Wall_Slide_Flip"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_yd3cn"]
input_0/name = "grounded"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "air"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "wallrunning"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "wallrunningflip"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "wallslide"
input_4/auto_advance = false
input_4/reset = true
input_5/name = "wallslideflip"
input_5/auto_advance = false
input_5/reset = true

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_xsbwb"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_2l6dj"]
nodes/Air/node = SubResource("AnimationNodeAnimation_kddly")
nodes/Air/position = Vector2(80, 420)
nodes/Idle/node = SubResource("AnimationNodeAnimation_c5mnv")
nodes/Idle/position = Vector2(80, 640)
nodes/Run/node = SubResource("AnimationNodeAnimation_x57s3")
nodes/Run/position = Vector2(80, 840)
nodes/Walk/node = SubResource("AnimationNodeAnimation_otf6w")
nodes/Walk/position = Vector2(80, 960)
nodes/Wall_Run/node = SubResource("AnimationNodeAnimation_lanya")
nodes/Wall_Run/position = Vector2(80, 1080)
nodes/Wall_Run_Flip/node = SubResource("AnimationNodeAnimation_6dkbq")
nodes/Wall_Run_Flip/position = Vector2(80, 1200)
nodes/Wall_Slide/node = SubResource("AnimationNodeAnimation_2kgbn")
nodes/Wall_Slide/position = Vector2(80, 1320)
nodes/Wall_Slide_Flip/node = SubResource("AnimationNodeAnimation_wi3pu")
nodes/Wall_Slide_Flip/position = Vector2(100, 1460)
nodes/ground_air_transition/node = SubResource("AnimationNodeTransition_yd3cn")
nodes/ground_air_transition/position = Vector2(640, 740)
nodes/iwr_blend/node = SubResource("AnimationNodeBlend3_xsbwb")
nodes/iwr_blend/position = Vector2(440, 760)
nodes/output/position = Vector2(920, 740)
node_connections = [&"ground_air_transition", 0, &"iwr_blend", &"ground_air_transition", 1, &"Air", &"ground_air_transition", 2, &"Wall_Run", &"ground_air_transition", 3, &"Wall_Run_Flip", &"ground_air_transition", 4, &"Wall_Slide", &"ground_air_transition", 5, &"Wall_Slide_Flip", &"iwr_blend", 0, &"Idle", &"iwr_blend", 1, &"Walk", &"iwr_blend", 2, &"Run", &"output", 0, &"ground_air_transition"]

[node name="Player" type="CharacterBody3D"]
collision_mask = 28
script = ExtResource("1_fa2ot")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_ng3tc")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_1hnpp")
player = NodePath("../..")

[node name="Walking" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_nucuc")
player = NodePath("../..")

[node name="Running" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_txvdn")
player = NodePath("../..")

[node name="Airborne" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_puejk")
player = NodePath("../..")

[node name="Wallrunning" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_iebvf")
jump_start_air_control = 5
jump_end_air_control = 1
player = NodePath("../..")

[node name="FallTimer" type="Timer" parent="MovementStateMachine/Wallrunning"]
wait_time = 2.0
one_shot = true

[node name="Wallsliding" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_mwpj2")
jump_start_air_control = 5
jump_end_air_control = 1
player = NodePath("../..")

[node name="CharacterComponent" parent="." instance=ExtResource("9_rvmax")]
base_speed = 3.0
base_run_speed = 8.0
base_jump_strength = 20.0
base_passive_healing = 1.0

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(-0.700338, 0, -6.12255e-08, 0, 0.700338, 0, 6.12255e-08, 0, -0.700338, 0, -0.0467247, 0)

[node name="Armature_011" type="Node3D" parent="Mesh"]

[node name="Skeleton3D" parent="Mesh/Armature_011" instance=ExtResource("10_bm732")]

[node name="Torso" parent="Mesh/Armature_011/Skeleton3D" index="0"]
transform = Transform3D(0.942409, -0.122489, -0.311225, -0.0159889, 0.912962, -0.407731, 0.33408, 0.389226, 0.858425, -0.00390314, 1.70317, -0.00184356)

[node name="R_ Foot" parent="Mesh/Armature_011/Skeleton3D" index="1"]
transform = Transform3D(-0.510861, -0.806802, -0.2968, 0.0335484, -0.3637, 0.930912, -0.859006, 0.46561, 0.212868, -0.122116, 0.163009, -0.57324)

[node name="R_Leg" parent="Mesh/Armature_011/Skeleton3D" index="2"]
transform = Transform3D(-0.384015, 0.298151, -0.873864, 0.332757, -0.838142, -0.432192, -0.86128, -0.456753, 0.222648, -0.306871, 0.68238, -0.290205)

[node name="R_UpLeg" parent="Mesh/Armature_011/Skeleton3D" index="3"]
transform = Transform3D(-0.505959, -0.19505, -0.840214, 0.223334, -0.970503, 0.0908078, -0.833142, -0.141704, 0.534597, -0.178944, 1.3189, -0.197266)

[node name="L_ Foot" parent="Mesh/Armature_011/Skeleton3D" index="4"]
transform = Transform3D(-0.540766, -0.773077, -0.331549, -0.0344642, -0.373457, 0.927007, -0.840467, 0.51272, 0.17531, 0.20883, 0.163167, 0.499695)

[node name="L_Leg" parent="Mesh/Armature_011/Skeleton3D" index="5"]
transform = Transform3D(-0.691704, 0.207758, -0.691652, -0.16359, -0.977907, -0.13014, -0.703408, 0.0231286, 0.71041, 0.0800916, 0.769131, 0.485363)

[node name="L_UpLeg" parent="Mesh/Armature_011/Skeleton3D" index="6"]
transform = Transform3D(-0.844526, -0.155515, -0.512436, -0.157427, -0.842525, 0.51514, -0.511852, 0.51572, 0.687052, 0.182088, 1.32171, 0.147121)

[node name="R_Shoulder" parent="Mesh/Armature_011/Skeleton3D" index="7"]
transform = Transform3D(-0.149218, -0.988585, -0.0208228, -0.425443, 0.083198, -0.901153, 0.892599, -0.125609, -0.433001, -0.132218, 1.8391, 0.0159117)

[node name="R_Arm" parent="Mesh/Armature_011/Skeleton3D" index="8"]
transform = Transform3D(-0.520274, -0.151056, 0.840534, -0.49652, -0.74728, -0.441633, 0.694825, -0.647113, 0.313788, -0.365943, 1.85878, -0.0137795)

[node name="R_ForeArm" parent="Mesh/Armature_011/Skeleton3D" index="9"]
transform = Transform3D(-0.356131, -0.408541, 0.840396, 0.171093, -0.912666, -0.37117, 0.918639, 0.0116003, 0.394927, -0.425807, 1.56263, -0.270232)

[node name="L_Shoulder" parent="Mesh/Armature_011/Skeleton3D" index="10"]
transform = Transform3D(0.325039, 0.895789, 0.303169, 0.429626, 0.145716, -0.891172, -0.842479, 0.419915, -0.337491, 0.0884253, 1.83509, 0.0947353)

[node name="L_Arm" parent="Mesh/Armature_011/Skeleton3D" index="11"]
transform = Transform3D(0.277278, 0.384409, -0.880538, 0.219656, -0.917563, -0.331404, -0.935344, -0.101524, -0.338857, 0.300205, 1.86955, 0.194019)

[node name="L_ForeArm" parent="Mesh/Armature_011/Skeleton3D" index="12"]
transform = Transform3D(0.571271, 0.0341212, -0.820052, -0.492404, -0.785108, -0.37569, -0.656648, 0.618418, -0.431708, 0.452551, 1.50591, 0.153784)

[node name="RightArmIK" type="SkeletonIK3D" parent="Mesh/Armature_011/Skeleton3D"]
process_priority = 1
root_bone = &"RightArm"
tip_bone = &"RightHand"
interpolation = 0.0
target_node = NodePath("../../../../SpringArmPivot/SpringArm3D/Camera3D/ArmIKTarget")
script = ExtResource("12_ox4fi")

[node name="Timer" type="Timer" parent="Mesh/Armature_011/Skeleton3D/RightArmIK"]
wait_time = 3.0
one_shot = true

[node name="LeftArmIK" type="SkeletonIK3D" parent="Mesh/Armature_011/Skeleton3D"]
process_priority = 1
root_bone = &"LeftArm"
tip_bone = &"LeftHand"
interpolation = 0.0
target_node = NodePath("../../../../SpringArmPivot/SpringArm3D/Camera3D/ArmIKTarget")
script = ExtResource("12_ox4fi")

[node name="Timer" type="Timer" parent="Mesh/Armature_011/Skeleton3D/LeftArmIK"]
wait_time = 3.0
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.908729, 0)
shape = SubResource("CapsuleShape3D_k6p7c")

[node name="SpringArmPivot" type="Node3D" parent="."]
script = ExtResource("10_k8tqn")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.75, 0)
collision_mask = 16
shape = SubResource("SphereShape3D_1vvpf")
spring_length = 4.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D"]

[node name="RayCast3D" type="RayCast3D" parent="SpringArmPivot/SpringArm3D/Camera3D"]
target_position = Vector3(0, 0, -1000)
collision_mask = 20

[node name="ArmIKTarget" type="Node3D" parent="SpringArmPivot/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.69693)

[node name="Rifle" parent="." instance=ExtResource("11_so0pk")]

[node name="Bazooka" parent="." instance=ExtResource("12_cu7y0")]

[node name="Grapple" parent="." instance=ExtResource("16_4aja2")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Mesh")
libraries = {
"Animations": SubResource("AnimationLibrary_pgn6q")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mesh")
libraries = {
"Animations": SubResource("AnimationLibrary_pgn6q")
}
tree_root = SubResource("AnimationNodeBlendTree_2l6dj")
anim_player = NodePath("../AnimationPlayer")
parameters/ground_air_transition/current_state = "grounded"
parameters/ground_air_transition/transition_request = ""
parameters/ground_air_transition/current_index = 0
parameters/iwr_blend/blend_amount = -1.0

[connection signal="timeout" from="Mesh/Armature_011/Skeleton3D/RightArmIK/Timer" to="Mesh/Armature_011/Skeleton3D/RightArmIK" method="_on_timer_timeout"]
[connection signal="timeout" from="Mesh/Armature_011/Skeleton3D/LeftArmIK/Timer" to="Mesh/Armature_011/Skeleton3D/LeftArmIK" method="_on_timer_timeout"]

[editable path="Mesh/Armature_011/Skeleton3D"]
